Fix Oculus trigger deadzone so triggers are exposed through gamepad API

The issue here is that the gamepad API will only expose a button if it
has been interacted with, to ensure logic for requiring user gestures
works correctly when a gamepad is faulty or has some weight pressed on
it.

Oculus touch triggers don't have a deadzone already applied, so the
logic to detect if they have been interacted with always returns false.

The fix is to apply a deadzone ourselves.

BUG=826714

Change-Id: I690e71283670bd30c6bdf0731ff5456d5d1eb112
Reviewed-on: https://chromium-review.googlesource.com/996519
Commit-Queue: Bill Orr <billorr@chromium.org>
Reviewed-by: David Dorwin <ddorwin@chromium.org>
Reviewed-by: Brandon Jones <bajones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#549601}
Former-commit-id: ed2b4dc48aa66907b84f9ae5e269937035d047cf